--- a/com.sportappium.com/pom.xml
+++ b/com.sportappium.com/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.CDAppium.org</groupId>
-  <artifactId>com.CDAppium.org</artifactId>
+  <groupId>com.sportappium.org</groupId>
+  <artifactId>com.sportappium.org</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
@@ -50,7 +50,7 @@
 			<groupId>info.cukes</groupId>
 			<artifactId>cucumber-testng</artifactId>
 			<version>1.2.5</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>junit</groupId>
@@ -62,7 +62,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.9.8</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 
 <dependency>
