--- a/com.sportappium.com/pom.xml
+++ b/com.sportappium.com/pom.xml
@@ -96,12 +96,18 @@
 	<version>3.0.2</version>
 </dependency>
 
-
+<dependency>
+    <groupId>org.codehaus.mojo</groupId>
+    <artifactId>versions-maven-plugin</artifactId>
+    <version>2.5</version>
+</dependency>
 <dependency>
 	<groupId>com.aventstack</groupId>
 	<artifactId>extentreports</artifactId>
 	<version>3.1.2</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins.workflow/workflow-cps -->
+
 
 
 </dependencies>
