--- a/com.sportappium.com/pom.xml
+++ b/com.sportappium.com/pom.xml
@@ -51,7 +51,7 @@
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.9.8</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
