--- a/com.sportappium.com/pom.xml
+++ b/com.sportappium.com/pom.xml
@@ -103,8 +103,9 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -140,7 +141,7 @@
 					<suiteXmlFiles>
 						<!-- <suiteXmlFile>${project.basedir}\MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile> -->
 						<!-- <suiteXmlFile>src/test/resources/MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile> -->
-						<suiteXmlFile>${project.basedir}/src/test/resources/MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile>
+						<suiteXmlFile>./src/test/resources/MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
