again updated the pom.xml 05/07

--- a/com.sportappium.com/pom.xml
+++ b/com.sportappium.com/pom.xml
@@ -141,7 +141,7 @@
 					<suiteXmlFiles>
 						<!-- <suiteXmlFile>${project.basedir}\MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile> -->
 						<!-- <suiteXmlFile>src/test/resources/MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile> -->
-						<suiteXmlFile>./src/test/resources/MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile>
+						<suiteXmlFile>com.sportappium.com.MYT_HomePageAndroid_MobileAppSamsung_RealDevicetestng.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
 			</plugin>
